Update: three-integer-sum - submission-2